Fix demo on localhost + add a link to GitHub

--- a/demo.html
+++ b/demo.html
@@ -3,9 +3,19 @@
 <head>
 <title>hole demo</title>
 <link type="text/css" rel="stylesheet" href="hole.css" />
+<style type="text/css">
+body {
+  font-family: 'Lucida Grande', sans-serif;
+}
+</style>
 </head>
 <body>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.js"></script>
+
+<h1>Hole demo</h1>
+
+<p><a href="https://github.com/antris/hole">GitHub</a></p>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.js"></script>
 <script type="text/javascript" src="bacon.js"></script>
 <script type="text/javascript" src="bacon.model.js"></script>
 <script type="text/javascript" src="bacon.jquery.js"></script>
